test/domains/compilerErrors/notsupportedNeq-dr-assoc.chpl

var DR: domain(1);
var DA: domain(int);

writeln(DR != DA);
